# agent-engine-cli

./: CHANGELOG.md  CHAT_README.md  CLAUDE.md  README.md  ae  pyproject.toml
.github/workflows/: test.yml
src/agent_engine_cli/: __init__.py  __main__.py  a2a_chat.py  chat.py  client.py  config.py  dependencies.py  main.py
tests/: fakes.py  test_a2a_chat.py  test_chat_monkey_patch.py  test_client.py  test_config.py  test_fix_attribute_error.py  test_get_effective_identity.py  test_main.py
