[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-engine-cli"
version = "0.1.0"
description = "A CLI to manage Agent Engine"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  {name = "Agent Engine Team", email = "info@agentengine.ai"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "requests>=2.31.0",
    "google-cloud-aiplatform>=1.133.0",
]

[project.scripts]
ae = "agent_engine_cli.main:app"

[project.urls]
"Homepage" = "https://github.com/yourusername/agent-engine-cli"
"Bug Tracker" = "https://github.com/yourusername/agent-engine-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_engine_cli"]

[dependency-groups]
dev = [
    "pytest>=7.0.0"
]
